Source/WebKit2/WebProcess/InjectedBundle/API/c/WKBundlePageOverlay.h
@@ -49,6 +49,18 @@ typedef bool (*WKBundlePageOverlayMouseUpCallback)(WKBundlePageOverlayRef pageOv
 typedef bool (*WKBundlePageOverlayMouseMovedCallback)(WKBundlePageOverlayRef pageOverlay, WKPoint position, const void* clientInfo);
 typedef bool (*WKBundlePageOverlayMouseDraggedCallback)(WKBundlePageOverlayRef pageOverlay, WKPoint position, WKEventMouseButton mouseButton, const void* clientInfo);
 
+typedef bool (*WKDataDetectionIsSupportedCallback)(WKBundlePageOverlayRef pageOverlay, const void* clientInfo);
+typedef bool (*WKDataDetectionExistsAtPointCallback)(WKBundlePageOverlayRef pageOverlay, WKPoint position, const void* clientInfo);
+typedef WKStringRef (*WKDataDetectionTypeAtPointCallback)(WKBundlePageOverlayRef pageOverlay, WKPoint position, const void* clientInfo);
+typedef bool (*WKDataDetectionShowMenuAtPointCallback)(WKBundlePageOverlayRef pageOverlay, WKPoint position, const void* clientInfo);
+
+struct WKBundlePageOverlayDataDetectionCallbacks {
+    WKDataDetectionIsSupportedCallback                                 supportsDataDetectors;
+    WKDataDetectionExistsAtPointCallback                               dataDetectorExistsAtPoint;
+    WKDataDetectionTypeAtPointCallback                                 dataDetectorCopyTypeAtPoint;
+    WKDataDetectionShowMenuAtPointCallback                             showDataDetectorMenuAtPoint;
+};
+    
 struct WKBundlePageOverlayClient {
     int                                                                 version;
     const void *                                                        clientInfo;
@@ -59,6 +71,7 @@ struct WKBundlePageOverlayClient {
     WKBundlePageOverlayMouseUpCallback                                  mouseUp;
     WKBundlePageOverlayMouseMovedCallback                               mouseMoved;
     WKBundlePageOverlayMouseDraggedCallback                             mouseDragged;
+    struct WKBundlePageOverlayDataDetectionCallbacks                    dataDetectionCallbacks;
 };
 typedef struct WKBundlePageOverlayClient WKBundlePageOverlayClient;
 
